tests/should-fail/cant-return-null-for-string.j
function foo takes nothing returns string
    return null
endfunction